<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#66000000">

    <TextView
        android:id="@+id/tv_setting_wallpaper"
        android:layout_width="match_parent"
        android:text="@string/txt_setting"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:layout_height="wrap_content" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewSetiing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/select_ll"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/txt_enable_touch"
            android:textColor="#fff"
            android:textSize="18sp"

            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/checkTouch"
            android:layout_width="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#fff"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_changeBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="20dp"
            android:background="@drawable/select_ll"
            android:drawableRight="@drawable/ic_open_with_black_24dp"
            android:drawableEnd="@drawable/ic_open_with_black_24dp"
            android:textColor="#fff"
            android:text="@string/txt_background" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_share_app"
        android:padding="20dp"
        android:text="@string/txt_share_app"
        android:textColor="#fff"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:background="@drawable/select_ll"
        android:drawableRight="@drawable/ic_share_black_24dp"
        android:drawableEnd="@drawable/ic_share_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_rate_app"
        android:padding="20dp"
        android:textColor="#fff"
        android:text="@string/txt_rate_app"
        android:layout_margin="10dp"
        android:background="@drawable/select_ll"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_star_black_24dp"
        android:drawableRight="@drawable/ic_star_black_24dp"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

</LinearLayout>